--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-Hello World
+<!DOCTYPE HTML>
 
-<head>
-<body>
-
-
-	<title>This is only a test for BYOD</title>
-
+<html>
+	<head>
+		<body>
+		Hello World
 
 
-</body>
-</head>
+		<title>This is only a test for BYOD</title>
+
+
+
+		</body>
+	</head>
+	</html>
